# reliquary

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pg.rs  sqlite.rs  types.rs
src/components/: app-logo.tsx  breadcrumbs.tsx  confirmation-dialog.tsx  create-table-dialog.tsx  database-navbar.tsx  main-layout.tsx  provider-grid.tsx  query-confirmation-dialog.tsx  query-tabs.tsx  safe-mode-toggle.tsx  sidebar-context.tsx  sql-editor.tsx  table-editor.tsx  table-tabs.tsx  theme-toggle.tsx
src/components/local-postgres-manager/: ServerList.tsx  index.tsx  types.ts
src/components/results-viewer/: ResultsViewerCore.tsx  index.tsx  review-changes-sheet.tsx  types.ts
src/components/schema-explorer/: SchemaSelector.tsx  TableList.tsx  TableSearch.tsx  index.tsx  types.ts
src/components/schema-visualizer/: index.tsx  types.ts
src/components/ui/: card.tsx  context-menu.tsx  dropdown-menu.tsx  switch.tsx  table.tsx
src/lib/: ipc-client.ts  persistence.ts
src/lib/connections/: store.ts  url-parser.ts
src/lib/db/: providers.ts  types.ts
src/lib/query/: keys.ts
src/lib/query/hooks/: use-connections.ts  use-local-pg-servers.ts  use-query.ts  use-schemas.ts  use-table-data.ts  use-tables.ts
src/lib/utils/: color.ts
src/pages/: AddConnection.tsx  AddConnectionForm.tsx  DatabaseView.tsx  Home.tsx  LocalPostgresSelection.tsx  QueryView.tsx  Settings.tsx  VisualizerPage.tsx
(+1 files in other folders)
